--- a/thoughtstream-frontend/package.json
+++ b/thoughtstream-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "google-auth-library": "^9.15.1",
     "react": "^19.1.0",
