--- a/thoughtstream-backend/package.json
+++ b/thoughtstream-backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.4",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -21,9 +23,11 @@
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "lottie-web": "^5.12.2",
     "mongoose": "^8.13.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
