--- a/thoughtstream-frontend/package.json
+++ b/thoughtstream-frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.4",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.8.4",
     "google-auth-library": "^9.15.1",
+    "lottie-web": "^5.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
