--- a/thoughtstream-backend/package.json
+++ b/thoughtstream-backend/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@lottiefiles/dotlottie-react": "^0.13.4",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.8.4",
