--- a/thoughtstream-backend/package.json
+++ b/thoughtstream-backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lottie-web": "^5.12.2",
     "mongoose": "^8.13.0",
