--- a/thoughtstream-backend/.env.example
+++ b/thoughtstream-backend/.env.example
@@ -1,7 +1,11 @@
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/diarydb?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<user>:<pass>@cluster0.aa8nm.mongodb.net/diarydb?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-WEATHER_API=your_api_key_here
+WEATHER_API=<<weather key>
 
-JWT_SECRET=<your_jwt_secret>
-GOOGLE_CLIENT_ID=<your_google_client_id>
-GOOGLE_CLIENT_SECRET=<your_google_client_secret>
+GOOGLE_CLIENT_ID=<google id>
+GOOGLE_CLIENT_SECRET=<google secret>
+GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
+SESSION_SECRET=<session secret>
+
+JWT_SECRET=<secret>
+
